fix height of modal to 80vh and add a scrollbar

--- a/_sass/components/_modals.scss
+++ b/_sass/components/_modals.scss
@@ -41,6 +41,10 @@
       box-sizing: border-box;
       width: 90%;
     }
+
+    // set height of modal and add scrollbar.
+    height: 80vh;
+    overflow-y: auto;
   }
 
   .btn-close {
